# OpenReco

./: .gitignore  LICENSE  README.md  icons.js  index.html  pyproject.toml  site.css
.github/workflows/: build-binaries.yml  ci.yml
aerialdata/: project.toml
docs/: 01-discovery.md  02-product-plan.md  03-architecture.md  04-pipeline-spec.md  05-roadmap.md
openreco/: __init__.py  api.py  batch.py  bootstrap.py  classify_ground.py  cli.py  compute.py  exporters.py  indices.py  markers.py  measure.py  measure_export.py  mvs_planesweep.py  panorama.py  provision.py  register_cloud.py  texture_bake.py  tiling.py  workflow.py
openreco/engine/: __init__.py  cache.py  context.py  dag.py  manifest.py  report.py  report_pdf.py  report_template.html  runner.py  stage.py
openreco/geo/: __init__.py  align.py  contour.py  crs.py  footprint.py
openreco/io/: __init__.py  gltf.py  images.py  pointcloud.py  raster.py  tiles3d.py
openreco/stages/: __init__.py  classify.py  clean.py  contours.py  coverage.py  dsm.py  dtm.py  dummy.py  export.py  fuse.py  georef.py  import_cloud.py  import_mesh.py  indices.py  ingest.py  markers.py  merge.py  mesh.py  mvs.py  panorama.py  refine.py  sfm.py  (+3 more)
packaging/: build.bat  build.sh  openreco.icns  openreco.spec  openreco_entry.py
scripts/: check_licenses.py  fetch_sample.py
testproj/: gcps.csv  markers.json  project.toml
tests/: test_align.py  test_api.py  test_api_ui.py  test_batch.py  test_classify.py  test_clean.py  test_cli.py  test_compute.py  test_contour.py  test_crs.py  test_engine.py  test_exporters.py  test_footprint.py  test_geo_raster.py  test_gltf.py  test_indices.py  test_ingest.py  test_markers.py  test_measure.py  test_merge.py  test_panorama.py  test_planesweep.py  test_pointcloud.py  test_provision.py  test_refine.py  test_register.py  test_report.py  test_sfm_integration.py  test_terrain.py  test_texture_bake.py  test_tiles3d.py  test_tiling.py  test_ui_server.py  test_workflow.py
(+13 files in other folders)
